# react-native-automerge-generated

./: .gitignore  AutomergeGenerated.podspec  LICENSE  PLAN.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  ubrn.config.yaml
__tests__/: README.md  automerge-native-simple.test.ts  automerge-native.test.ts  automerge-slim.d.ts  setup.ts
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mindoo/automerge/: AutomergeGeneratedModule.kt  AutomergeGeneratedPackage.kt
cpp/: react-native-automerge-generated.cpp  react-native-automerge-generated.h
ios/: AutomergeGenerated.h  AutomergeGenerated.mm
rust/: Cargo.toml  uniffi.toml
rust/src/: actor_id.rs  automerge.udl  change.rs  change_hash.rs  cursor.rs  doc.rs  lib.rs  obj_id.rs  obj_type.rs  scalar_value.rs  value.rs
scripts/: add-useapi-export.sh  build-android.sh  build-check.sh  build-ios.sh  clean.sh
src/: NativeAutomergeGenerated.ts  index.ts  proxy.ts  useapi-adapter.ts
