[package]
name = "uniffi_automerge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "uniffi_automerge"

[dependencies]
automerge = { version = "0.7.2", default-features = false }
uniffi = "0.29.3"
thiserror = "1.0"

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }
